# waylandsink-with-video-overlay-rs

./: Cargo.toml  LICENSE  README.md  wayland-sink-with-video-overlay_git.bb
src/: main.rs
