[package]
name = "wayland-sink-with-video-overlay"
version = "0.1.0"
authors = ["Joel Winarske <joel.winarske@linux.com>"]
repository = "https://github.com/jwinarske/waylandsink-with-video-overlay-rs"
homepage = "https://github.com/jwinarske/waylandsink-with-video-overlay-rs"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = { version = "0.28.3", features = ["use_system_lib"] }
gstreamer = "0.16.5"
gstreamer-app = "0.16.5"
gstreamer-video = "0.16.5"
anyhow = "1.0"
derive_more = "0.99.5"
tempfile = ">=2.0, <4.0"
smithay-client-toolkit = "0.16.0"
